Allow toggling the folder list.

--- a/src/chrome/locale/en-US/imagebrowser.dtd
+++ b/src/chrome/locale/en-US/imagebrowser.dtd
@@ -4,6 +4,8 @@
 <!ENTITY quit-menuitem.label               "Quit">
 
 <!ENTITY view-menu.label                   "View">
+<!ENTITY folderlist-menuitem.label         "Folder List">
+
 <!ENTITY tools-menu.label                  "Tools">
 <!ENTITY console-menuitem.label            "Error Console">
 
