--- a/src/chrome/locale/en-US/imagebrowser.dtd
+++ b/src/chrome/locale/en-US/imagebrowser.dtd
@@ -7,7 +7,10 @@
 <!ENTITY folderlist-menuitem.label         "Folder List">
 
 <!ENTITY tools-menu.label                  "Tools">
+<!ENTITY addons-menuitem.label             "Addons">
 <!ENTITY console-menuitem.label            "Error Console">
+<!ENTITY inspector-menuitem.label          "DOM Inspector">
+<!ENTITY config-menuitem.label             "Advanced Configuration">
 
 <!ENTITY help-menu.label                   "Help">
 <!ENTITY about-menuitem.label              "About &brandShortName;">
